# paper-ingest-MCP

./: .gitignore  README.md  config.yaml  pyproject.toml
src/paper_ingest_mcp/: config.py  glmocr-sdk.py  glmocr_sdk.py  server.py
